# zero-to-prod-book

./: Cargo.toml  Dockerfile  config.yaml
.github/workflows/: general.yaml
config/: base.yaml
migrations/: 20230420043108_create_subscriptions_table.sql
notes/: choosing_database_crate.md
scripts/: init_db.sh
src/: config.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  hello_check.rs
