[package]
name = "zero_to_prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
chrono = "0.4.24"

[dependencies.sqlx]
version = "0.6.2"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.16"
