[package]
name = "zero_to_prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
chrono = "0.4.24"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1.37"

[dependencies.sqlx]
version = "0.6.2"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1.17.1"
reqwest = "0.11.16"
